syntax = "proto3";

package pb;
message MovieDetailInfo {
  string title = 1 ; // 演员名字
  string url = 2 ; //
  string cover = 3 ; //
  string rate = 4 ; // 影片logo
  int64 playAble = 5 ; // 是否3D
  int64 isNew = 6 ; // 是否DMAX
  int64 isFilter = 7 ; // 是否过滤
  int64 movieId = 8 ; // 是否热映
  int64 tagId = 9 ;
  int64 createTime = 10 ; // 上映日期
}

message MovieDetailReq {
  int64 locationId = 1 ;
  int64 movieId = 2 ;
}
message MovieDetailRep {
  int64 code = 1;
  string err = 2;
  MovieDetailInfo res = 3;
}

message MovieCreditsWithTypesReq {
  int64 MovieId = 1 ;
}

message MovieCreditsWithTypesRep {
  repeated Type types = 1 ;
}

message Type {
  string typeName = 1;
  string typeNameEc = 2 ;
  repeated Persons persons = 3 ;
}

message Persons {
  string image = 1 ;
  string name = 2 ;
  string nameEn = 3 ;
  string roleCover = 4 ;
  string personate = 5 ;
}

message ImageAllReq {
  int64 movieId = 2 ;
}

message ImageAllRep {
  repeated Image images = 1 ;
}

message Image {
  string image = 1 ;
}


message LocationMoviesReq {

}

message LocationMoviesRep {
  repeated MovieDetailInfo movies = 1 ; // 正在上映的影片
}

message MovieComingNewReq {

}

message MovieComingNewRep {
  repeated MovieDetailInfo movies = 1 ; // 正在上映的影片
}

message SearchRep {
  repeated SearchMovie subjects = 1 ; // 搜索的列表
  int64 total = 2 ; // 列表总数
}

message SearchReq {
  string q = 1 ; // 搜搜index
}

message SearchMovie {
  string title = 1 ; // 名字
  string id = 2 ; // id
  Images image = 3 ; // 图片
  repeated Genres genres = 4 ; // 类型
  string year = 5 ; // 上映年份
  Rating rating = 6 ; // 评分
}

message Genres {
  string type = 1 ; // 电影类型
}

message Rating {
  float average = 1 ; // 评分
}

message Images {
  string small = 1 ; // 图片
}

message DayMovie{

  string releaseTime = 1 ; // 上映时间
  int64 length = 2 ; // 上映的时长
  string releaseType = 3 ; // 上映类型
  string mhName = 4 ; // 厅的名字
  float releaseDiscount = 5 ; // 价格
  int64 movieId = 6 ; // 电影id
  int64 mhId = 7 ; // 厅的id
  int64 cinemaId = 8 ; // 影院id
  string filmName = 9 ; // 影片名称
}

message GetFilmsByCidADayReq {
  int64 cinemaId = 1 ; // 影院id
  int64 filmId = 2 ; // 影片id
  int64 dayNum = 3 ; // 0：今天  1：明天  2：后天
}

message GetFilmsByCidADayRsp {
  repeated DayMovie dayMovie = 1 ; // 正在上映的影片
}

message MoviesListReq {
  int64 tagId = 1 ;
  int64 limit = 2 ;
  int64 page = 3;
}

message MoviesListsRep {
  int32 code = 1;
  string error = 2;
  int32 count = 3;
  repeated MovieDetailInfo list = 4 ;
}
message MoviesTagsReq{
   int32 tagId=1;
}
message TagsInfo {
    int32 tagId=1;
    string cateName =2;
    int32 sort=3;
}
message MoviesTagsRep{
  int32 code=1;
  string err=2;
  repeated TagsInfo list = 4 ;

}
service FilmServiceExt {
  // 获取电影分类
  rpc GetMovieTags(MoviesTagsReq) returns(MoviesTagsRep){}
  // 获取影片
  rpc GetMoviesList(MoviesListReq) returns(MoviesListsRep){}
  // 电影详情
  rpc MovieDetail(MovieDetailReq) returns(MovieDetailRep) {}
  // 获取导演与演员信息
  rpc MovieCreditsWithTypes(MovieCreditsWithTypesReq) returns (MovieCreditsWithTypesRep) {}
  // 获取正在售票的影片
}
